[package]
name = "middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2"
chrono = "0.4.40"
env_logger = "0.11.7"
jsonwebtoken = "9.3.1"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
